--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.3.1",
     "core-js": "^3.6.5",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "vue": "^3.0.0"
